--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ```
 <!DOCTYPE html>
 <html>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages $\int$.</p>
 </body>
 </html>
 ```
