--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@ MathJax = {
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages $\int$.</p>
+\documentclass[]{article}
+
+%opening
+\title{}
+\author{}
+
+\begin{document}
+
+\maketitle
+
+\begin{abstract}
+
+\end{abstract}
+
+\section{Introduction}
+Hello World
+{\Large Formula $2+2=\sqrt(4)$}
+
+
+\end{document}
+
 </body>
 </html>
 ```
